feat: report language server errors according to settings
Signed-off-by: azerr <azerr@redhat.com>